--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -428,6 +428,10 @@ input[type="checkbox"].input-validation-error {
     color: #8e8e8e;
 }
 
+.start-list-red {
+    background-color: #ff0000 !important;
+}
+
 .live-video {
     max-width: 100%;
     max-height: 500px;
